--- a/contact.html
+++ b/contact.html
@@ -54,10 +54,14 @@
           <div>Let us know how to help you :)</div>
         </div>
         <div class="w-form">
-          <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form">
-            <div><label for="name" class="label">Name</label><input type="text" class="text-field-form w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"></div>
-            <div><label for="email" class="label">Email Address</label><input type="email" class="text-field-form w-input" maxlength="256" name="email" data-name="Email" placeholder="" id="email" required=""></div>
-            <div id="w-node-f4ac6339-4a6e-c219-6ab3-3f3db0fc893d-70fbd352"><label for="field" class="label">Email Address</label><textarea placeholder="" maxlength="5000" id="field" name="field" data-name="field" class="textarea w-input"></textarea></div><input type="submit" value="Send" data-wait="Please wait..." id="w-node-_6feaedd9-3f94-f7cf-f5b2-b4dee531524f-70fbd352" class="submit-button w-button">
+          <form id="contact-form" name="contact-form" data-name="Contact Form" action="https://formsubmit.co/minugahanna@gmail.com" method="POST" class="form">
+            <input type="hidden" name="_next" value="https://www.minugahanna.co/thank-you.html">
+            <div><label for="name" class="label">Name</label>
+            <input type="text" class="text-field-form w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"></div>
+            <div><label for="email" class="label">Email Address</label>
+            <input type="email" class="text-field-form w-input" maxlength="256" name="email" data-name="Email" placeholder="" id="email" required=""></div>
+            <div id="w-node-f4ac6339-4a6e-c219-6ab3-3f3db0fc893d-70fbd352"><label for="field" class="label">Email Address</label>
+            <textarea placeholder="" maxlength="5000" id="field" name="field" data-name="field" class="textarea w-input"></textarea></div><input type="submit" value="Send" data-wait="Please wait..." id="w-node-_6feaedd9-3f94-f7cf-f5b2-b4dee531524f-70fbd352" class="submit-button w-button">
           </form>
           <div class="w-form-done">
             <div>Thank you! Your submission has been received!</div>
