--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
         </div>
         <div class="w-form">
           <form id="contact-form" name="contact-form" data-name="Contact Form" action="https://formsubmit.co/minugahanna@gmail.com" method="POST" class="form">
-            <input type="hidden" name="_next" value="https://www.minugahanna.co/thank-you.html">
+            <input type="hidden" name="_next" value="https://www.minugahana.co/thank-you">
             <div><label for="name" class="label">Name</label>
             <input type="text" class="text-field-form w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"></div>
             <div><label for="email" class="label">Email Address</label>
