--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,8 @@
           <div>Let us know how to help you :)</div>
         </div>
         <div class="w-form">
-          <form id="contact-form" name="contact-form" data-name="Contact Form" action="https://formsubmit.co/minugahanna@gmail.com" method="POST" class="form">
+          <form id="contact-form" name="contact-form" data-name="Contact Form" action="https://formsubmit.co/hello@minugahana.co" method="POST" class="form">
+            <input type="hidden" name="_cc" value="minugahanna@gmail.com">
             <input type="hidden" name="_next" value="https://www.minugahana.co/thank-you">
             <div><label for="name" class="label">Name</label>
             <input type="text" class="text-field-form w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"></div>
