--- a/shop.html
+++ b/shop.html
@@ -22,14 +22,29 @@
   <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
       <div class="container-inner">
-        <a href="./" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" class="brand w-nav-brand"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
+        <a href="./" id="w-node-_649394a2-8411-ead7-0575-63509ac15fb8-9ac15fb5" aria-current="page" class="brand w-nav-brand w--current"><img src="images/minugahana-logo.png" loading="lazy" alt="" class="image-logo"></a>
         <nav role="navigation" id="w-node-_649394a2-8411-ead7-0575-63509ac15fba-9ac15fb5" class="nav-menu w-nav-menu">
           <a href="./about" class="nav-link w-nav-link">About</a>
-          <a href="./shop" aria-current="page" class="nav-link w-nav-link w--current">Shop</a>
+          <a href="./shop" class="nav-link w-nav-link">Shop</a>
           <a href="./production" class="nav-link w-nav-link">Production</a>
+          <div class="link-wrap-right show-mobile">
+            <a href="/shop#!/~/search" class="w-inline-block"><img src="images/search.svg" loading="lazy" alt="" class="nav-icon"></a>
+            <a href="/shop#!/~/account/returnUrl=/account" class="w-inline-block"><img src="images/account.svg" loading="lazy" alt="" class="nav-icon"></a>
+          </div>
         </nav>
-        <div id="w-node-_649394a2-8411-ead7-0575-63509ac15fc1-9ac15fb5" class="menu-button w-nav-button">
-          <div class="w-icon-nav-menu"></div>
+        <div id="w-node-_7844f824-d470-5eb1-758f-88f049aa8005-9ac15fb5" class="burger-cart-wrap">
+          <div id="w-node-_649394a2-8411-ead7-0575-63509ac15fc1-9ac15fb5" class="menu-button w-nav-button">
+            <div class="w-icon-nav-menu"></div>
+          </div>
+          <a href="#" class="nav-link-cart show-mobile w-inline-block"><img src="images/cart.svg" loading="lazy" alt="" class="nav-icon">
+            <div class="embed-cart w-embed w-script">
+              <div class="ec-cart-widget"></div>
+              <div>
+                <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?80605001&data_platform=code&data_date=2022-11-13" charset="utf-8"></script>
+                <script type="text/javascript">Ecwid.init();</script>
+              </div>
+            </div>
+          </a>
         </div>
         <div id="w-node-_649394a2-8411-ead7-0575-63509ac15fc3-9ac15fb5" class="link-wrap-right">
           <a href="/shop#!/~/search" class="w-inline-block"><img src="images/search.svg" loading="lazy" alt="" class="nav-icon"></a>
