--- a/index.html
+++ b/index.html
@@ -78,11 +78,14 @@
   <div class="section-footer wf-section">
     <div class="container w-container">
       <div class="footer-wrap">
-        <a href="./shipping-and-returns" class="footer-link">Shipping &amp; Returns</a>
-        <a href="./contact" class="footer-link">Contact</a>
-        <a href="./size-guide" class="footer-link">Size guide</a>
-        <a href="./care" class="footer-link">Care</a>
-        <a href="https://www.instagram.com/minugahan_a/" target="_blank" class="footer-link-icon w-inline-block"><img src="images/instagram-minu.svg" loading="lazy" alt="" class="footer-icon"></a>
+        <div class="footer-links-wrap">
+          <a href="./shipping-and-returns" class="footer-link">Shipping &amp; Returns</a>
+          <a href="./contact" class="footer-link">Contact</a>
+          <a href="./size-guide" class="footer-link">Size guide</a>
+          <a href="./care" class="footer-link">Care</a>
+          <a href="https://www.instagram.com/minugahan_a/" class="footer-link-icon w-inline-block"><img src="images/instagram-minu.svg" loading="lazy" alt="" class="footer-icon"></a>
+        </div>
+        <div class="copyright">© 2022 Minugahana. All rights reserved</div>
       </div>
     </div>
   </div>
