--- a/shop.html
+++ b/shop.html
@@ -52,7 +52,7 @@
   <div class="section-medium wf-section">
     <div class="container w-container">
       <div class="tabs-menu hide">
-        <a data-w-id="e317fcaa-d69c-0f79-d41e-fe421598c4c1" href="shop.html" aria-current="page" class="tab-link w--current">All</a>
+        <a data-w-id="e317fcaa-d69c-0f79-d41e-fe421598c4c1" href="./shop" aria-current="page" class="tab-link w--current">All</a>
         <a data-w-id="0b2c1516-5a0f-631e-7288-85515e693e0c" href="/shop#!/Top/c/141843269" class="tab-link">Top</a>
         <a href="/shop#!/Bottom/c/141846269" class="tab-link">Bottom</a>
       </div>
