--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container no-pad w-container">
       <div class="home-image-wrap">
         <img src="images/minugahan-hero-1.jpg" loading="lazy" srcset="images/minugahan-hero-1-p-500.jpg 500w, images/minugahan-hero-1-p-800.jpg 800w, images/minugahan-hero-1-p-1080.jpg 1080w, images/minugahan-hero-1-p-1600.jpg 1600w, images/minugahan-hero-1-p-2000.jpg 2000w, images/minugahan-hero-1.jpg 2880w" sizes="100vw" alt="" class="image-contain-sides">
-        <button class="button-home">Shop Now</button>
+        <button href="./shop" class="button-home">Shop Now</button>
       </div>
     </div>
   </div>
