--- a/about.html
+++ b/about.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
 <!--  Last Published: Sun Nov 13 2022 05:56:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="636b43f2e501505edc922501" data-wf-site="6369af2b715eea54d5417e1f">
-<div class="about-hidden">
-<head>
+<head class="about-hidden">
   <meta charset="utf-8">
   <title>About</title>
   <meta content="About" property="og:title">
@@ -170,5 +169,5 @@
   });
 </script>
 </body>
-</div>
+</head>
 </html>
