--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
 <!--  Last Published: Sun Nov 13 2022 05:56:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="636b43f2e501505edc922501" data-wf-site="6369af2b715eea54d5417e1f">
-<head>
+<section class="about-hide">
+  <head>
   <meta charset="utf-8">
   <title>About</title>
   <meta content="About" property="og:title">
@@ -169,4 +170,5 @@
   });
 </script>
 </body>
+</section>
 </html>
