--- a/production.html
+++ b/production.html
@@ -61,11 +61,11 @@
           <h2>2. Resources</h2>
           <p>Most of the fabric remnants/vintages/deadstocks are carefully picked from the thrift store nearby. Designs are made according to the type of material we get, we only make what is suitable and wearable for that specific material. We believe that being sustainable starts with the material - getting to know the material, understanding how the material works and giving it a second life is how we respect and value it.</p>
           <h2>3. People</h2>
-          <p>Our products are handmade by Hanna herself and Lina, a local tailor. Wages are paid according to the request made by our tailor or anyone involves in the production, keeping an ethical working environment is our top priority.</p>
+          <p>Our products are handmade by local tailors. Wages are paid according to the request made by tailors or anyone involves in the production, fair trade is our top priority.</p>
           <h2>4. Quantity</h2>
           <p>Overproduction is not for us. We only produce small quantities at a time, as our aim is to avoid waste and unused garments that pile up in a big stockroom. Each piece should fulfil its purpose: being worn by one of you.</p>
           <h2>5. Packaging</h2>
-          <p>We carefully select our packaging solutions, avoiding plastic and using recycled paper for all our cards. Our tags are locally printed, strings are from leftovers and our recycled paper cards are made with love by kids from Sk. Pekan Nabawan which was one of my last projects with them. As they continue making it, we will always happy to buy from them.</p>
+          <p>We carefully select our packaging solutions, avoiding plastic and using recycled paper for all our cards. Our tags are locally printed, strings are from leftovers and our recycled paper cards are made with love in our studio using papers we collected over the years.</p>
         </div>
       </div>
     </div>
