--- a/production.html
+++ b/production.html
@@ -53,7 +53,7 @@
     <div class="container w-container">
       <div class="paragraph-wrap">
         <div class="margin-bottom-50px">
-          <p>“We are on earth to take care of life. We are on earth to take care of each other”As we are working towards sustainability, these are the aspects that we are mainly focusing:</p>
+          <p>“We are on earth to take care of life. We are on earth to take care of each other.” As we are working towards sustainability, these are the aspects that we are mainly focusing:</p>
         </div>
         <div class="production_rich-text w-richtext">
           <h2>1. Location</h2>
