--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
   <div class="section-medium wf-section">
     <div class="container w-container">
       <div class="paragraph-wrap">
-        <p>Minugahana is a Japanese proverbs which directly translated as “not seeing is a flower”. Currently based in North Borneo/Sabah. I started off this platform initially for passion purpose, yet it was so lovely to see the amount of support I got ever since. I look forward to grow through experience with you guys.</p>
+        <p>Minugahana is a Japanese proverbs which directly translated as “not seeing is a flower”. We are based in North Borneo/Sabah. we started off this platform initially for passion purpose, yet it was so lovely to see the amount of support we got ever since. We look forward to grow through experience with you guys.</p>
       </div>
     </div>
   </div>
@@ -64,13 +64,13 @@
   <div class="section-medium wf-section">
     <div class="container w-container">
       <div class="paragraph-wrap">
-        <p>I see Minugahana more like a human experience than a brand/label. My aim is just to learn-experience-create more and making sure I’m giving minimal impact on the environment while working towards it.  Recently I found a local tailor that I work closely with, her name is Lina. She is a middle age woman and very hardworking. I made the tops and she made the skirts. I hope to collaborate with her more in the future.</p>
+        <p>I see Minugahana more like a human experience than a brand/label. Our aim is just to learn-experience-create more and making sure we are giving minimal impact on the environment while working towards it.  We are consist of one designer and three local tailors (Siti, Jennifer and Anitah). </p>
       </div>
     </div>
   </div>
-  <div class="section-image wf-section">
-    <div class="container no-pad w-container">
-      <div class="image-wrap"><img src="images/about_2.jpg" loading="lazy" srcset="images/about_2-p-500.jpg 500w, images/about_2-p-800.jpg 800w, images/about_2-p-1080.jpg 1080w, images/about_2-p-1600.jpg 1600w, images/about_2-p-2000.jpg 2000w, images/about_2.jpg 2880w" sizes="100vw" alt="" class="image-contain-sides"></div>
+  <!div class="section-image wf-section">
+    <!div class="container no-pad w-container">
+      <!div class="image-wrap"><img src="images/about_2.jpg" loading="lazy" srcset="images/about_2-p-500.jpg 500w, images/about_2-p-800.jpg 800w, images/about_2-p-1080.jpg 1080w, images/about_2-p-1600.jpg 1600w, images/about_2-p-2000.jpg 2000w, images/about_2.jpg 2880w" sizes="100vw" alt="" class="image-contain-sides"></div>
     </div>
   </div>
   <div class="section-medium wf-section">
@@ -80,28 +80,27 @@
       </div>
     </div>
   </div>
-  <div class="section-image wf-section">
-    <div class="container no-pad w-container">
-      <div class="image-wrap"><img src="images/about_3.jpg" loading="lazy" srcset="images/about_3-p-500.jpg 500w, images/about_3-p-800.jpg 800w, images/about_3-p-1080.jpg 1080w, images/about_3-p-1600.jpg 1600w, images/about_3-p-2000.jpg 2000w, images/about_3.jpg 2880w" sizes="100vw" alt="" class="image-contain-sides"></div>
+  <!div class="section-image wf-section">
+    <!div class="container no-pad w-container">
+      <!div class="image-wrap"><img src="images/about_3.jpg" loading="lazy" srcset="images/about_3-p-500.jpg 500w, images/about_3-p-800.jpg 800w, images/about_3-p-1080.jpg 1080w, images/about_3-p-1600.jpg 1600w, images/about_3-p-2000.jpg 2000w, images/about_3.jpg 2880w" sizes="100vw" alt="" class="image-contain-sides"></div>
     </div>
   </div>
   <div class="section-medium wf-section">
     <div class="container w-container">
       <div class="paragraph-wrap">
-        <p>10% of profits are donated monthly to different non-profit organizations, mainly focusing on the ones that needed the most. If you have any suggestions don’t hesitate to contact us, we would really appreciate it.</p>
+        <p>With this, we aim to increase the socioeconomics of the local community especially single mothers and housewives. We also will always be taking part in donationg some proceeds to any non-profits organisations, from time to time.</p>
       </div>
     </div>
   </div>
-  <div class="section-image wf-section">
+  <!div class="section-image wf-section">
     <div class="container no-pad w-container">
-      <div class="image-wrap"><img src="images/about_4.jpg" loading="lazy" srcset="images/about_4-p-500.jpg 500w, images/about_4-p-800.jpg 800w, images/about_4-p-1080.jpg 1080w, images/about_4-p-1600.jpg 1600w, images/about_4-p-2000.jpg 2000w, images/about_4.jpg 2880w" sizes="100vw" alt="" class="image-contain-sides"></div>
+      <!div class="image-wrap"><img src="images/about_4.jpg" loading="lazy" srcset="images/about_4-p-500.jpg 500w, images/about_4-p-800.jpg 800w, images/about_4-p-1080.jpg 1080w, images/about_4-p-1600.jpg 1600w, images/about_4-p-2000.jpg 2000w, images/about_4.jpg 2880w" sizes="100vw" alt="" class="image-contain-sides"></div>
     </div>
   </div>
   <div class="section-medium wf-section">
     <div class="container w-container">
       <div class="paragraph-wrap">
-        <p>Sending love and gratitude to the lovely people who supported Minugahana’s small and slow motion expression. xx<br><br>Photos are taken by my sister, Dana.</p>
-      </div>
+        <p>Sending love and gratitude to the lovely people who supported Minugahana’s small and slow motion expression. xx<br>
     </div>
   </div>
   <div class="section-footer wf-section">
