update about airport 1

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
   <div class="section-medium wf-section">
     <div class="container w-container">
       <div class="paragraph-wrap">
-        <p>I see Minugahana more like a human experience than a brand/label. Our aim is just to learn-experience-create more and making sure we are giving minimal impact on the environment while working towards it.  We are consist of one designer and three local tailors (Siti, Jennifer and Anitah). </p>
+        <p>Minugahana more like a human experience than a brand/label. Our aim is just to learn-experience-create more and making sure we are giving minimal impact on the environment while working towards it.  We are consist of one designer and three local tailors (Siti, Jennifer and Anitah). </p>
       </div>
     </div>
   </div>
