update about airport 4

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
   <div class="section-medium wf-section">
     <div class="container w-container">
       <div class="paragraph-wrap">
-        <p>Minugahana is a Japanese proverbs which directly translated as “not seeing is a flower”. We are based in North Borneo/Sabah. we started off this platform initially for passion purpose, yet it was so lovely to see the amount of support we got ever since. We look forward to grow through experience with you guys.</p>
+        <p>Minugahana is a Japanese proverbs which directly translated as “not seeing is a flower”. We are based in North Borneo/Sabah. We started off this platform initially for passion purpose, yet it was so lovely to see the amount of support we got ever since. We look forward to grow through experience with you guys.</p>
       </div>
     </div>
   </div>
@@ -88,7 +88,7 @@
   <div class="section-medium wf-section">
     <div class="container w-container">
       <div class="paragraph-wrap">
-        <p>With this, we aim to increase the socioeconomics of the local community especially single mothers and housewives. We also will always be taking part in donationg some proceeds to any non-profits organisations, from time to time.</p>
+        <p>With this, we aim to increase the socioeconomics of the local community especially single mothers and housewives. We also will always be taking part in donating some proceeds to any non-profits organisations, from time to time.</p>
       </div>
     </div>
   </div>
