--- a/shipping-and-returns.html
+++ b/shipping-and-returns.html
@@ -81,7 +81,7 @@
           <a href="./contact" class="footer-link">Contact</a>
           <a href="./size-guide" class="footer-link">Size guide</a>
           <a href="./care" class="footer-link">Care</a>
-          <a href="https://www.instagram.com/minugahan_a/" class="footer-link-icon w-inline-block"><img src="images/instagram-minu.svg" loading="lazy" alt="" class="footer-icon"></a>
+          <a href="https://www.instagram.com/minugahana.co/" class="footer-link-icon w-inline-block"><img src="images/instagram-minu.svg" loading="lazy" alt="" class="footer-icon"></a>
         </div>
         <div class="copyright">© 2022 Minugahana. All rights reserved</div>
       </div>
