--- a/size-guide.html
+++ b/size-guide.html
@@ -128,6 +128,19 @@
               <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c62-3faa71ed" class="size-block">
                 <div>101-109</div>
               </div>
+               <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c58-3faa71ed" class="w-layout-grid grid-size">
+              <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c59-3faa71ed" class="size-block header">
+                <div>xl</div>
+              </div>
+              <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c5c-3faa71ed" class="size-block">
+                <div>100-110</div>
+              </div>
+              <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c5f-3faa71ed" class="size-block">
+                <div>84-90</div>
+              </div>
+              <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c62-3faa71ed" class="size-block">
+                <div>110-115</div>
+              </div>
             </div>
           </div>
         </div>
