--- a/size-guide-test.html
+++ b/size-guide-test.html
@@ -74,31 +74,45 @@
               </div>
             </div>
             <div id="w-node-_1a4e9fe8-cc1a-0e0d-4d2a-c2020540f66f-3faa71ed" class="w-layout-grid grid-size">
-              <div id="w-node-_1a4e9fe8-cc1a-0e0d-4d2a-c2020540f670-3faa71ed" class="size-block header">
-                <div>xs</div>
+              <div class="size-block header">
+                <div>xxs</div>
               </div>
               <div id="w-node-_1a4e9fe8-cc1a-0e0d-4d2a-c2020540f673-3faa71ed" class="size-block">
-                <div>78-81</div>
+                <div>75</div>
               </div>
               <div id="w-node-_1a4e9fe8-cc1a-0e0d-4d2a-c2020540f676-3faa71ed" class="size-block">
-                <div>58-63</div>
+                <div>59</div>
               </div>
               <div id="w-node-_1a4e9fe8-cc1a-0e0d-4d2a-c2020540f679-3faa71ed" class="size-block">
-                <div>83-86</div>
+                <div>82</div>
               </div>
             </div>
+            <div id="w-node-_1a4e9fe8-cc1a-0e0d-4d2a-c2020540f66f-3faa71ed" class="w-layout-grid grid-size">
+                <div id="w-node-_1a4e9fe8-cc1a-0e0d-4d2a-c2020540f670-3faa71ed" class="size-block header">
+                  <div>xs</div>
+                </div>
+                <div id="w-node-_1a4e9fe8-cc1a-0e0d-4d2a-c2020540f673-3faa71ed" class="size-block">
+                  <div>80</div>
+                </div>
+                <div id="w-node-_1a4e9fe8-cc1a-0e0d-4d2a-c2020540f676-3faa71ed" class="size-block">
+                  <div>64</div>
+                </div>
+                <div id="w-node-_1a4e9fe8-cc1a-0e0d-4d2a-c2020540f679-3faa71ed" class="size-block">
+                  <div>87</div>
+                </div>
+              </div>
             <div id="w-node-_3210aa23-f1ce-7606-3f9b-cdbe621fb79c-3faa71ed" class="w-layout-grid grid-size">
               <div id="w-node-_3210aa23-f1ce-7606-3f9b-cdbe621fb79d-3faa71ed" class="size-block header">
                 <div>s</div>
               </div>
               <div id="w-node-_3210aa23-f1ce-7606-3f9b-cdbe621fb7a0-3faa71ed" class="size-block">
-                <div>83-86</div>
+                <div>85</div>
               </div>
               <div id="w-node-_3210aa23-f1ce-7606-3f9b-cdbe621fb7a3-3faa71ed" class="size-block">
-                <div>66-68</div>
+                <div>69</div>
               </div>
               <div id="w-node-_3210aa23-f1ce-7606-3f9b-cdbe621fb7a6-3faa71ed" class="size-block">
-                <div>88-93</div>
+                <div>92</div>
               </div>
             </div>
             <div id="w-node-dcba2654-8b79-4d7b-680c-8fb9b8e844bc-3faa71ed" class="w-layout-grid grid-size">
@@ -106,13 +120,13 @@
                 <div>m</div>
               </div>
               <div id="w-node-dcba2654-8b79-4d7b-680c-8fb9b8e844c0-3faa71ed" class="size-block">
-                <div>88-94</div>
+                <div>90</div>
               </div>
               <div id="w-node-dcba2654-8b79-4d7b-680c-8fb9b8e844c3-3faa71ed" class="size-block">
-                <div>76-83</div>
+                <div>74</div>
               </div>
               <div id="w-node-dcba2654-8b79-4d7b-680c-8fb9b8e844c6-3faa71ed" class="size-block">
-                <div>93-101</div>
+                <div>97</div>
               </div>
             </div>
             <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c58-3faa71ed" class="w-layout-grid grid-size">
@@ -120,14 +134,42 @@
                 <div>l</div>
               </div>
               <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c5c-3faa71ed" class="size-block">
-                <div>96-99</div>
+                <div>95</div>
               </div>
               <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c5f-3faa71ed" class="size-block">
-                <div>76-83</div>
+                <div>79</div>
               </div>
               <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c62-3faa71ed" class="size-block">
-                <div>101-109</div>
+                <div>102</div>
               </div>
+            </div>
+            <div class="w-layout-grid grid-size">
+                <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c59-3faa71ed" class="size-block header">
+                  <div>xl</div>
+                </div>
+                <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c5c-3faa71ed" class="size-block">
+                  <div>100</div>
+                </div>
+                <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c5f-3faa71ed" class="size-block">
+                  <div>85</div>
+                </div>
+                <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c62-3faa71ed" class="size-block">
+                  <div>107</div>
+                </div>
+            </div>
+            <div class="w-layout-grid grid-size">
+                <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c59-3faa71ed" class="size-block header">
+                  <div>xxl</div>
+                </div>
+                <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c5c-3faa71ed" class="size-block">
+                  <div>105</div>
+                </div>
+                <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c5f-3faa71ed" class="size-block">
+                  <div>92</div>
+                </div>
+                <div id="w-node-aa25a8cf-9f23-c3f3-036a-5cef9c039c62-3faa71ed" class="size-block">
+                  <div>112</div>
+                </div>
             </div>
           </div>
         </div>
